painel de imagens concluido; revisar bug de nao carregar dados da analise de frota, adicionar número dos cartoes dos veiculos

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ body {
 }
 .veiculo-card img {
     width: 100%;
-    height: 240px;
+    height: 260px;
     object-fit: cover;
     display:block
 }
@@ -286,7 +286,7 @@ body {
     border-bottom: none;
 }
 
-/* --- ESTILOS PARA OS INDICADORES (KPIs) - CORRIGIDO --- */
+/* --- ESTILOS PARA OS INDICADORES (KPIs) --- */
 .kpi-container {
     display: flex;
     flex-direction: column;
