tela de analise de desempenho concluida, dar inicio na tela dos contratos e adicionar processo de multas e processo de manutenção veículos

--- a/style.css
+++ b/style.css
@@ -35,10 +35,12 @@ body {
     opacity: 0;
     transition: opacity 0.6s ease-in-out;
     pointer-events: none;
+    z-index: 1; /* Z-index para garantir que a tela esteja atrás de outras sobreposições */
 }
 .dashboard-tela.ativo {
     opacity: 1;
     pointer-events: auto;
+    z-index: 100;
 }
 .conteudo-tela {
     display: flex;
