--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ body {
 .slider-container {
     width: 80%;
     max-width: 900px;
-    height: 70%;
+    height: 65%; /* Reduzido para dar espaço ao dropdown */
     margin: 0 auto;
     overflow: hidden;
     position: relative;
@@ -503,6 +503,10 @@ body {
 /* Reutiliza o estilo do status do contrato no slide */
 .contrato-slide .contrato-status {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 20px;
+    left: 20px;
+    width: 25px;
+    height: 25px;
+    border: 3px solid #34495e;
 }
+
